# spm

./: README.md  pyproject.toml
src/spm/: __init__.py  base.py  manager.py
tests/: test_manager.py
