[project]
name = "spm"
version = "0.1.0"
description = "simple position manager"
authors = [
    {name = "yvictor", email = "yvictor3141@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]
